--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,35 +16,48 @@
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.238" />
+        app:layout_constraintVertical_bias="0.148" />
 
     <Button
-        android:id="@+id/buttonnNumberONE"
+        android:id="@+id/buttonMultiplicacion"
         android:layout_width="59dp"
-        android:layout_height="40dp"
-        android:onClick="onClickButtonOne"
-        android:text="1"
-        app:backgroundTint="#009688"
+        android:layout_height="42dp"
+        android:onClick="onClicMultiplicacion"
+        android:text="x"
+        app:backgroundTint="#B57D880F"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.227"
+        app:layout_constraintHorizontal_bias="0.806"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.426" />
+        app:layout_constraintVertical_bias="0.715" />
 
     <Button
-        android:id="@+id/buttonNumberTwo"
-        android:layout_width="58dp"
-        android:layout_height="41dp"
-        android:onClick="onClickButtonTwo"
-        android:text="2"
-        app:backgroundTint="#B9075A0A"
+        android:id="@+id/buttonNumberFive"
+        android:layout_width="57dp"
+        android:layout_height="40dp"
+        android:onClick="onClickButtonFive"
+        android:text="5"
+        app:backgroundTint="#D3680C0C"
+        app:layout_constraintBottom_toTopOf="@+id/buttonNumberEight"
+        app:layout_constraintEnd_toStartOf="@+id/buttonNumberSix"
+        app:layout_constraintHorizontal_bias="0.768"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/buttonNumberTwo" />
+
+    <Button
+        android:id="@+id/buttonNumberSeven"
+        android:layout_width="57dp"
+        android:layout_height="42dp"
+        android:onClick="onClickButtonSeven"
+        android:text="7"
+        app:backgroundTint="#E83F51B5"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintHorizontal_bias="0.177"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.427" />
+        app:layout_constraintVertical_bias="0.484" />
 
     <Button
         android:id="@+id/buttonNumberThree"
@@ -55,10 +68,23 @@
         app:backgroundTint="#B253B156"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.762"
+        app:layout_constraintHorizontal_bias="0.81"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.428" />
+        app:layout_constraintVertical_bias="0.283" />
+
+    <Button
+        android:id="@+id/buttonNumberSix"
+        android:layout_width="58dp"
+        android:layout_height="41dp"
+        android:onClick="onClickButtonSix"
+        android:text="6"
+        app:backgroundTint="#ABC61010"
+        app:layout_constraintBottom_toTopOf="@+id/buttonNumberNine"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.81"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/buttonNumberThree" />
 
     <Button
         android:id="@+id/buttonNumberFour"
@@ -70,64 +96,10 @@
         app:backgroundTint="#C67C0D0D"
         app:layout_constraintBottom_toTopOf="@+id/buttonNumberSeven"
         app:layout_constraintEnd_toStartOf="@+id/buttonNumberFive"
-        app:layout_constraintHorizontal_bias="0.686"
+        app:layout_constraintHorizontal_bias="0.525"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/buttonnNumberONE"
-        app:layout_constraintVertical_bias="0.45" />
-
-    <Button
-        android:id="@+id/buttonNumberSeven"
-        android:layout_width="57dp"
-        android:layout_height="42dp"
-        android:onClick="onClickButtonSeven"
-        android:text="7"
-        app:backgroundTint="#E83F51B5"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.231"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.628" />
-
-    <Button
-        android:id="@+id/buttonNumberFive"
-        android:layout_width="57dp"
-        android:layout_height="40dp"
-        android:onClick="onClickButtonFive"
-        android:text="5"
-        app:backgroundTint="#D3680C0C"
-        app:layout_constraintBottom_toTopOf="@+id/buttonNumberEight"
-        app:layout_constraintEnd_toStartOf="@+id/buttonNumberSix"
-        app:layout_constraintHorizontal_bias="0.83"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/buttonNumberTwo"
-        app:layout_constraintVertical_bias="0.491" />
-
-    <Button
-        android:id="@+id/buttonNumberSix"
-        android:layout_width="58dp"
-        android:layout_height="41dp"
-        android:onClick="onClickButtonSix"
-        android:text="6"
-        app:backgroundTint="#ABC61010"
-        app:layout_constraintBottom_toTopOf="@+id/buttonNumberNine"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.762"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/buttonNumberThree" />
-
-    <Button
-        android:id="@+id/buttonNumberEight"
-        android:layout_width="56dp"
-        android:layout_height="40dp"
-        android:onClick="onClickButtonEight"
-        android:text="8"
-        app:backgroundTint="#C4111F6C"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/buttonNumberNine"
-        app:layout_constraintStart_toEndOf="@+id/buttonNumberSeven"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.626" />
+        app:layout_constraintVertical_bias="0.42" />
 
     <Button
         android:id="@+id/buttonNumberNine"
@@ -138,10 +110,24 @@
         app:backgroundTint="#C42D4DF8"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.759"
+        app:layout_constraintHorizontal_bias="0.807"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.625" />
+        app:layout_constraintVertical_bias="0.482" />
+
+    <Button
+        android:id="@+id/buttonResta"
+        android:layout_width="59dp"
+        android:layout_height="47dp"
+        android:onClick="onClickResta"
+        android:text="-"
+        app:backgroundTint="#D0636C0F"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.505"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.72" />
 
     <Button
         android:id="@+id/buttonNumberZero"
@@ -152,45 +138,98 @@
         app:backgroundTint="#9E813118"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.494"
+        app:layout_constraintHorizontal_bias="0.502"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.736" />
+        app:layout_constraintVertical_bias="0.6" />
 
     <Button
-        android:id="@+id/buttonSuma"
+        android:id="@+id/buttonNumberEight"
         android:layout_width="56dp"
-        android:layout_height="39dp"
-        android:layout_marginStart="83dp"
-        android:layout_marginLeft="83dp"
-        android:layout_marginTop="34dp"
-        android:layout_marginEnd="36dp"
-        android:layout_marginRight="36dp"
-        android:layout_marginBottom="183dp"
-        android:onClick="onClickSuma"
-        android:text="+"
-        app:backgroundTint="#CE601F0B"
+        android:layout_height="40dp"
+        android:onClick="onClickButtonEight"
+        android:text="8"
+        app:backgroundTint="#C4111F6C"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/buttonNumberZero"
+        app:layout_constraintEnd_toStartOf="@+id/buttonNumberNine"
+        app:layout_constraintHorizontal_bias="0.525"
+        app:layout_constraintStart_toEndOf="@+id/buttonNumberSeven"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.483" />
+
+    <Button
+        android:id="@+id/buttonNumberTwo"
+        android:layout_width="58dp"
+        android:layout_height="41dp"
+        android:onClick="onClickButtonTwo"
+        android:text="2"
+        app:backgroundTint="#B9075A0A"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/buttonNumberSeven" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.283" />
 
     <Button
         android:id="@+id/buttonIgual"
         android:layout_width="60dp"
         android:layout_height="41dp"
-        android:layout_marginStart="37dp"
-        android:layout_marginLeft="37dp"
-        android:layout_marginTop="37dp"
-        android:layout_marginEnd="82dp"
-        android:layout_marginRight="82dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginLeft="24dp"
+        android:layout_marginEnd="67dp"
+        android:layout_marginRight="67dp"
         android:layout_marginBottom="181dp"
         android:onClick="onClickIgual"
         android:text="="
         app:backgroundTint="#BA782309"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toEndOf="@+id/buttonNumberZero"
-        app:layout_constraintTop_toBottomOf="@+id/buttonNumberNine" />
+        app:layout_constraintTop_toBottomOf="@+id/buttonNumberNine"
+        app:layout_constraintVertical_bias="0.295" />
+
+    <Button
+        android:id="@+id/buttonSuma"
+        android:layout_width="56dp"
+        android:layout_height="39dp"
+        android:onClick="onClickSuma"
+        android:text="+"
+        app:backgroundTint="#CE601F0B"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.174"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.599" />
+
+    <Button
+        android:id="@+id/buttonnNumberONE"
+        android:layout_width="59dp"
+        android:layout_height="40dp"
+        android:onClick="onClickButtonOne"
+        android:text="1"
+        app:backgroundTint="#009688"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.176"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.283" />
+
+    <Button
+        android:id="@+id/buttonDivision"
+        android:layout_width="56dp"
+        android:layout_height="43dp"
+        android:onClick="onClickDivision"
+        android:text="/"
+        app:backgroundTint="#DC596108"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.177"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.716" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
